# devops_project_dtb

./: Dockerfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: team-workflow.yaml
benchmark/: benchmark_hangman.py
server/py/: battleship.py  dog.py  hangman.py  main.py
test/: test_dog.py
