[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "jinja2",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "python-multipart",
    "jupyter",
    "pylint==3.2.2",
    "colorama",
    "mypy==1.10.0",
    "pytest==8.2.1",
    "coverage==7.5.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "E501",  # line-too-long
    "W191",  # indentation contains tabs
]

[tool.ruff.format]
indent-style = "space"