[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "jinja2",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "python-multipart",
    "jupyter",
    "pylint==3.2.2",
    "colorama",
    "mypy==1.10.0",
    "pytest==8.2.1",
    "coverage==7.5.1",
]
